--- a/Newbie/ProfileCard/index.html
+++ b/Newbie/ProfileCard/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Profile card component</title>
+  </head>
+  <body class="container">
+    <div class="card">
+      <div class="card__banner">
+        <!-- Card Banner Bg -->
+      </div>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Victor Crest
-  26
-  London
+      <div class="user-info">
+        <img
+          src="images/image-victor.jpg"
+          alt="user avatar"
+          class="user-avatar"
+        />
 
-  80K
-  Followers
+        <h1 class="heading">
+          Victor Crest <span class="heading-para">26</span>
+        </h1>
+        <p class="location">London</p>
 
-  803K
-  Likes
+        <div class="profile-stats">
+          <div class="followers">
+            <h1 class="heading">80K</h1>
+            <p class="para">Followers</p>
+          </div>
 
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Aziz</a>.
-  </div>
-</body>
+          <div class="likes">
+            <h1 class="heading">803K</h1>
+            <p class="para">Likes</p>
+          </div>
+
+          <div class="photos">
+            <h1 class="heading">1.4K</h1>
+            <p class="para">Photos</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
